--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">The17ODSapp</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hint_email">Correo electrónico</string>
+    <string name="hint_contrasenia">contraseña</string>
+    <string name="label_button_regisrar">Registrar</string>
 </resources>
