--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="label_button_entrar">Entrar</string>
     <string name="label_bienvenido">Bienvenido</string>
     <string name="label_button_cerrarsesion">Cerrar sesión</string>
+    <string name="label_button_editperfil">Editar Perfil</string>
 </resources>
