RegistroDataFragment con EditTexts y boton listos para usarse

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,17 @@
     <string name="label_button_olvidecontrasenia">Olvidé mi contraseña</string>
     <string name="hint_ejemploEmail">ejemplo@gmail.com</string>
     <string name="label_button_recuperarContrasenia">Recuperar contraseña</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="label_registraDatos">Registra tus datos</string>
+    <string name="label_nombreCompleto">Nombre completo</string>
+    <string name="label_direccion">Dirección</string>
+    <string name="label_direccionCalle">Calle</string>
+    <string name="label_direccionNExterior">N. Exterior</string>
+    <string name="label_direccionCPostal">C.P</string>
+    <string name="label_direccionColonia">Colonia</string>
+    <string name="label_direccionPais">País</string>
+    <string name="label_direccionEstado">Estado</string>
+    <string name="label_direccionCiudad">Ciudad</string>
+    <string name="label_button_registrarDatos">Registrar datos</string>
 </resources>
