Cambie el identificado correo to nickname

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,6 @@
     <string name="label_direccionEstado">Estado</string>
     <string name="label_direccionCiudad">Ciudad</string>
     <string name="label_button_registrarDatos">Registrar datos</string>
+    <string name="label_nickname">Nickname</string>
+    <string name="hint_nickname">Usuario007</string>
 </resources>
